--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "swiper": "^10.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
